syntax = "proto3";

package slurm_opt_grpc;


service Submit {
  // Sends a greeting
  rpc submit (stream Command) returns (stream CommandReply) {}
}

message CommandReply {
  string message = 1;
}


message Command{
  uint32 version=1;
  string executive_path=2;
  repeated string arguments=3;

  message ResourceLimit{
    uint32 cpu_byte=1;
    uint64 memory_byte=2;
    uint64 memory_sw_byte=3;
    uint64 memory_ft_byte=4;
    uint64 blockio_wt_byte=5;
  }
  ResourceLimit rLimit=4;

}